rework, code cleanup